fix scrollbar style

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -79,7 +79,6 @@
   bottom: -50px;
   opacity: 0;
   transition: all 0.4s ease;
-  background-color: #eee;
 }
 
 .popup-intercom-open {
@@ -87,16 +86,14 @@
   opacity: 1;
 }
 
-.popup-intercom-box {
+.popup-intercom-layout {
   position: relative;
   width: 100%;
   height: 100%;
-  border-radius: inherit;
-  overflow: auto;
-  padding-bottom: 17px;
+  background-color: #eee;
 }
 
-.popup-intercom-box::after {
+.popup-intercom-layout::after {
   content: "";
   position: absolute;
   top: 0px;
@@ -112,6 +109,15 @@
   border-top-left-radius: inherit;
   border-top-right-radius: inherit;
   z-index: 0;
+}
+
+.popup-intercom-layout .popup-intercom-box {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  z-index: 1;
+  padding-bottom: 110px;
 }
 
 .popup-intercom-header {
@@ -152,16 +158,24 @@
 .popup-intercom-body .card {
   border: 0px;
   border-top: 2px solid #a6abfd;
-  -webkit-box-shadow: -2px 2px 10px 0px rgba(0, 0, 0, 0.1);
-  -moz-box-shadow: -2px 2px 10px 0px rgba(0, 0, 0, 0.1);
-  box-shadow: -2px 2px 10px 0px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: -2px 4px 10px 0px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: -2px 4px 10px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: -2px 4px 10px 0px rgba(0, 0, 0, 0.1);
   border-radius: 7px;
+}
+
+.popup-intercom-body .card * {
+  border-radius: inherit;
+}
+
+.popup-intercom-body .card .card-img-top {
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
 }
 
 .popup-intercom-body .card .card-header {
   border: 0px;
   background-color: white;
-  border-radius: inherit;
 }
 
 .popup-intercom-body .card .card-header .card-title {
@@ -174,8 +188,7 @@
 }
 
 .popup-intercom-body .card .card-body {
-  padding: 0px 20px 0px 20px;
-  border-radius: inherit;
+  padding: 0px 20px 20px 20px;
 }
 
 .popup-intercom-body .card .card-footer {
@@ -183,7 +196,6 @@
   border: 0px;
   margin: 0px;
   padding: 0px 20px 15px 20px;
-  border-radius: inherit;
 }
 
 /* Bootstrap+ */
@@ -209,11 +221,37 @@
   margin: 0px;
 }
 
+/* Scrollbar */
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border: 0px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border: 0px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #666;
+}
+
 @media (min-width: 992px) {
   .btn.btn-intercom.btn-intercom-init {
     -webkit-box-shadow: -2px 2px 10px 0px rgba(0, 0, 0, 0);
     -moz-box-shadow: -2px 2px 10px 0px rgba(0, 0, 0, 0);
     box-shadow: -2px 2px 10px 0px rgba(0, 0, 0, 0);
+  }
+
+  .popup-intercom-layout .popup-intercom-box {
+    padding-bottom: 30px;
   }
 
   /* Popup Intercom */
@@ -222,15 +260,38 @@
     height: 640px;
     right: 35px;
     bottom: 80px;
-    border-radius: 15px;
-    background-color: #fff;
-    -webkit-box-shadow: -3px 5px 39px 0px rgba(0, 0, 0, 0.15);
-    -moz-box-shadow: -3px 5px 39px 0px rgba(0, 0, 0, 0.15);
-    box-shadow: -3px 5px 39px 0px rgba(0, 0, 0, 0.15);
   }
 
   .popup-intercom-open {
     bottom: 100px;
     opacity: 1;
+  }
+
+  .popup-intercom-layout {
+    border-radius: 10px;
+    background-color: #fff;
+    -webkit-box-shadow: 0px 5px 40px 0px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0px 5px 40px 0px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 5px 40px 0px rgba(0, 0, 0, 0.2);
+  }
+
+  /* Scrollbar */
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #666;
   }
 }
